# kanon

./: .gitignore  AGENTS.md  AI_PIPELINE.md  ARCHITECTURE.md  ASSET_MODEL.md  CANON_PRD.md  CMS_INTEGRATION.md  CONFIDENCE_SYSTEM.md  ONTOLOGY.md  README.md  VALIDATION.md  pyproject.toml
canon/: audit.py  cli.py  confidence.py  drift.py  generate.py  graph.py  loader.py  visualize.py
canon/templates/: facilitator_guide.yaml  setup_guide.yaml
data-food/concepts/: food_safety.yaml  italian_cuisine.yaml  knife_skills.yaml  mise_en_place.yaml  pasta_cooking.yaml  sauce_making.yaml
data-food/evidence/: americas_test_kitchen.yaml  chef_marco_blog.yaml  food_safety_gov.yaml  serious_eats.yaml
data-food/facts/: chicken_safe_temp.yaml  dice_keep_root.yaml  knife_sharp_safer.yaml  mise_en_place_definition.yaml  pasta_al_dente_test.yaml  pasta_reserve_water.yaml  pasta_rinse_after.yaml  pasta_salt_amount.yaml  pasta_water_ratio.yaml  pasta_water_ratio_old.yaml  (+3 more)
docs/: canon-flow.html  confidence-scoring.html  relationship-model.html
kanon/: auth.py  citation_report.py  citations.py  cli.py  confidence.py  crawl.py  drift.py  generate.py  graph.py  ingest.py  loader.py  review.py  simple_generate.py  simple_graph.py  visualize.py
logs/: audit.jsonl
tests/: test_audit.py  test_citations.py  test_cli.py  test_confidence.py  test_crawl.py  test_drift.py  test_e2e_maintenance.py  test_generate.py  test_graph.py  test_ingest.py  test_integration.py  test_loader.py  test_review.py  test_simplified.py  test_validation.py  test_visualize.py  test_visualize_scoped.py
(+215 files in other folders)
